Body X overflow fixed

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,8 @@
+
+body {
+  overflow-x: hidden;
+}
+
 iframe {
   border: none;
 }
@@ -40,10 +45,6 @@ article {
 .logo-container {
   display: flex;
   align-items: center;
-}
-
-.logo-container a {
-  overflow-x: hidden;
 }
 
 .btn-primary {
